--- a/joguinho/index.html
+++ b/joguinho/index.html
@@ -13,9 +13,12 @@
             <img src="img/logo.png" id="log">
             <form class="d-flex">
                 <input class="form-control me-2" type="search" placeholder="o que desejar buscar?" aria-label="Search">
-                <button class="btn btn-outline-success" type="submit">buscar</button>
+                <button class="btn btn-outline-success" type="submit"><img src="img/lupinha.jpg" class="lupa"></button>
             </form>
             <ul class="nav nav-pills nav-fill">
+              <li class="nav-item">
+                <a class="nav-link " href="#"><img src="img/balão.png" class="lista"></a>
+              </li>
                 <li class="nav-item">
                   <a class="nav-link " href="#"><img src="img/caminhão.png" class="lista"></a>
                 </li>
